Quote variable expressions correctly.

This fixes expressions containing spaces.

Thanks to Valentyn Pavliuchenko for the patch.
http://reviewboard.kde.org/r/3935
BUG: 235759